generators/polymer-app/templates/public/custom-components/splash-screen/splash-screen.scss
@import '../../stylesheets/partials/_layouts.scss';
@import '../../stylesheets/partials/_mixins.scss';
@import '../../stylesheets/partials/_theme.scss';

$transition-settings: 0.3s ease-out;

:host {
	@include transition(background-color $transition-settings);
	@include layout-vertical;
	@include layout-center;
	@include layout-center-justified;
	display: block;
	background-color: var($theme-loading-background);
}

#card {
	@include transition(background-color $transition-settings, box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1));
	@include layout-vertical;
	@include layout-center;
	@include border-radius(8px);
	background-color: rgba(0, 0, 0, 0);
	padding: 40px;

	&.loading {
		background-color: $white-primary;
	}

	#title {
		@include transition(color $transition-settings);
		color: rgba(0, 0, 0, 0);
		font-size: 24px;
		font-weight: 500;
		line-height: 28px;
		margin: 0 0 4px;
		text-align: center;

		&.loading {
			color: $black-primary;
		}
	}
}

#spinner {
	@include transition(height $transition-settings, width $transition-settings, margin $transition-settings);
	height: 28px;
	width: 28px;
	margin: 1em 0 0.5em;

	&.minimised {
		height: 0;
		margin: 0;
		width: 0;
	}
}

